@@ -1,3 +1,8 @@
+Tue Mar  1 10:33:15 2005  Boris Kolpackov  <boris@kolpackov.net>
+
+	* protocols/ace/RMCast/Acknowledge.h: Made Acknowledge::Descr
+	  public to get broken Sun C++ 5.4 out of its misery.
+
 Tue Mar  1 07:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_hpux_aCC.GNU:
